remove labels for small devices; avoid header overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -216,6 +216,7 @@ caption {
   .navbar-brand { padding-right: 0; }
   .nav > li > a { padding-right: 0; padding-left: 10px; }
   .navbar-header { font-size: 80%; }
+  .nav-label { display: none; }
 }
 
 
